# Black-Hole

./: .gitignore  000run.bat  000runconvert.bat  AGENTS.MD  CLAUDE - Copy.md  CLAUDE.md  CLAUDiomiro.md  GRAVITY_MODULE_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PLAN.md  INSTRUCTIONS.md  PHASE1_API_REFERENCE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE_1_IO_VISUALIZATION_SUMMARY.md  QUICK_START_CONFIG.md  README.md  REFACTOR_PLAN.md  TASK_015_IMPLEMENTATION_SUMMARY.md  check_orbit_config.py  compare_newtonian_gr_radii.py  debug_neighbors.py  debug_treesph.py  diagnose_nan_hydro.py  phase 2 prompt.md  phase_2_instructions.md  pyproject.toml  run_tests.sh  test_bh_gravity.py  test_bh_gravity_static.py  test_exact_error_scenario.py  test_gpu_default.py  test_gui_has_cuda.py  test_integration_gpu_fix.py  test_nan_safety_fixes.py  test_newtonian_bh_gravity.py  test_newtonian_vs_gr.py  test_octree_fixes.py  test_octree_minimal.py  test_octree_neighbors.py  test_octree_nonumba.py  (+11 more)
.github/: README_CI.md
claudio/: AI_PROMPT.md  CLARIFICATION_ANSWERS.json  CLARIFICATION_QUESTIONS.json  INITIAL_PROMPT.md  TASK_SUMMARY.md  log.txt
configs/: autogen1.yaml  autogen2.yaml  kerr_retrograde_tde.yaml  newtonian_tde.yaml  schwarzschild_tde.yaml
docs/: AI_PROMPT.md  BH_GRAVITY_IMPLEMENTATION.md  BSOD_FIX_SUMMARY.md  CLAUDE.md  FINAL_VALIDATION_REPORT.md  GPU_AUTODETECT_FIX.md  GPU_OCTREE_IMPLEMENTATION.md  GPU_OCTREE_README.md  GUI_ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  INSTRUCTIONS.md  NAN_HYDRO_FIX.md  NEWTONIAN_BH_GRAVITY.md  OCTREE_SUCCESS.md  ORBIT_SETUP_GUIDE.md  PHASE2_BUGFIX_SUMMARY.md  RAYTRACING_SPACETIME_RESEARCH.md  RUNNING_TESTS.md  SESSION_SUMMARY.md  SUMMARY.md  TESTING_CHECKLIST.md  TREESPH_IMPLEMENTATION.md  phase 2 prompt.md
examples/: 01_newtonian_tde_demo.py  02_schwarzschild_gr_comparison.py  03_kerr_inclined_orbit.py  README_TASK039.md  config_demo.py  demo_io_visualization.py  gravity_solver_demo.py  phase3_demo.py  run_demo_io_visualization.py  test_integration_and_ics.py  validate_gr_vs_newtonian.py
gui/: AGENTS.md  API.md  README_TASK100.md  __init__.py  control_panel.py  data_display.py  energy_evolution.csv  main_window.py  simulation_thread.py  web_viewer.py
prompts/: core_orchestrator.agent.md  gravity_relativistic.agent.md  ics_and_orbits.agent.md  io_and_visualization.agent.md  sph_engine.agent.md  thermo_radiation.agent.md
scripts/: benchmark_optimization.py  check_cuda.py  check_gpu_module.py  (+5 more)
(+191 files in other folders)
